--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"svelte-typewriter": "^3.2.3"
 	}
 }
