--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
+		"@emailjs/browser": "^4.4.1",
 		"aos": "^2.3.4",
 		"svelte-inview": "^4.0.4",
 		"svelte-typewriter": "^3.2.3"
 	},
 	"engines": {
-		"node": "20.x"
+		"node": ">=20"
 	}
 }
